--- a/Calculus/parts/part1.tex
+++ b/Calculus/parts/part1.tex
@@ -50,7 +50,7 @@ The domain of a function $ f $ is the set of all valid input values. The range c
 	\begin{tikzpicture}[scale=0.9]
 		\draw[->] (-4,0) -- (4,0) node[right] {$ x $};
 		\draw[->] (0,-4) -- (0,4) node[above] {$ y $};
-		\draw[very thick,color=red,domain=0:3] plot (\x,{sqrt(\x)}) node[right] {$ y = \sqrt[2]{x} $};
+		\draw[very thick,color=red,domain=0:3] plot (\x,{sqrt(\x)}) node[right] {$ y = \sqrt[]{x} $};
 	\end{tikzpicture}
 	\caption{root function when $ n $ is even}
 \end{figure}
@@ -123,7 +123,7 @@ Angles can be measured in 2 ways: \\
 	      A radian is a measure of the angle formed by the arc of a circle whose length is equal to the circle's radius. \\
 \end{enumerate}
 
-\begin{theorem}[Degree]
+\begin{theorem}[Radian]
 	\begin{align}
 		\theta = {s \over r} = {arclength \over radius}
 	\end{align}
@@ -137,9 +137,9 @@ How are radians and degrees related? \\
 		\draw[-] (-3,0) -- (3,0);
 		\draw[-] (0,-3) -- (0,3);
 		\draw (2,0) arc (0:360:2);
-		\draw[-,very thick] (0, 0) -- (1.3, 1.5);
-		\draw[-,very thick] (0, 0) -- (-0.6, 1.9);
-		\draw[-,very thick] (0, 0) -- (-1.9, 0.6) node[left] {$ \approx $ 0.1415 radian};
+		\draw[very thick] (0, 0) -- (1.3, 1.5);
+		\draw[very thick] (0, 0) -- (-0.6, 1.9);
+		\draw[very thick] (0, 0) -- (-1.9, 0.6) node[left] {$ \approx $ 0.1415 radian};
 	\end{tikzpicture}
 	\caption{radian}
 \end{figure}
@@ -159,7 +159,7 @@ This relationship provides us with a way to easily convert between the two measu
 
 	(a) $ 30^\circ = $ \\
 
-	(b) $ 220^\circ = $ 
+	(b) $ 220^\circ = $
 \end{exercise}
 
 \begin{exercise}
@@ -227,7 +227,7 @@ Here are the three most common trigonometric functions and their reciprocals. \\
 	\centering
 	\begin{tabular}{|c|c|}
 		\hline
-		range                    & $ -1 \le sin(\theta) \ge 1 $        \\
+		range                    & $ -1 \le sin(\theta) \le 1 $        \\
 		\hline
 		doamin                   & $ \theta \in \mathbb R $            \\
 		\hline
@@ -604,7 +604,7 @@ We can switch between any two bases easily by using the formula: \\
 
 \begin{exercise}\nonumber
 	Proof
-	
+
 	\vspace{5cm}
 \end{exercise}
 
@@ -638,7 +638,7 @@ The natural logarithm has the exact same properties as any other logarithmic fun
 
 	(a)
 	\begin{align}
-		2^x & = 2^{1-x}     \\
+		2^x & = 2^{1-x} \\
 		\\
 		\\
 		\\
@@ -647,7 +647,7 @@ The natural logarithm has the exact same properties as any other logarithmic fun
 
 	(b)
 	\begin{align}
-		3^{{1 \over 2} + 10} & = 27   \\
+		3^{{1 \over 2} + 10} & = 27 \\
 		\\
 		\\
 		\\
@@ -657,7 +657,7 @@ The natural logarithm has the exact same properties as any other logarithmic fun
 
 	(c)
 	\begin{align}
-		2^x     & = 10                   \\
+		2^x & = 10 \\
 		\\
 		\\
 		\\
@@ -667,7 +667,7 @@ The natural logarithm has the exact same properties as any other logarithmic fun
 
 	(d)
 	\begin{align}
-		log(x) - 1   & = log(x - 1)                           \\
+		log(x) - 1 & = log(x - 1) \\
 		\\
 		\\
 		\\
@@ -691,7 +691,7 @@ The natural logarithm has the exact same properties as any other logarithmic fun
 
 	(f)
 	\begin{align}
-		log_2(x^4) + log_2(x^2) & = 6     \\
+		log_2(x^4) + log_2(x^2) & = 6 \\
 		\\
 		\\
 		\\
