--- a/Calculus_Solution/parts/part1.tex
+++ b/Calculus_Solution/parts/part1.tex
@@ -50,7 +50,7 @@ The domain of a function $ f $ is the set of all valid input values. The range c
 	\begin{tikzpicture}[scale=0.9]
 		\draw[->] (-4,0) -- (4,0) node[right] {$ x $};
 		\draw[->] (0,-4) -- (0,4) node[above] {$ y $};
-		\draw[very thick,color=red,domain=0:3] plot (\x,{sqrt(\x)}) node[right] {$ y = \sqrt[2]{x} $};
+		\draw[very thick,color=red,domain=0:3] plot (\x,{sqrt(\x)}) node[right] {$ y = \sqrt[]{x} $};
 	\end{tikzpicture}
 	\caption{root function when $ n $ is even}
 \end{figure}
@@ -123,7 +123,7 @@ Angles can be measured in 2 ways: \\
 	      A radian is a measure of the angle formed by the arc of a circle whose length is equal to the circle's radius. \\
 \end{enumerate}
 
-\begin{theorem}[Degree]
+\begin{theorem}[Radian]
 	\begin{align}
 		\theta = {s \over r} = {arclength \over radius}
 	\end{align}
@@ -137,9 +137,9 @@ How are radians and degrees related? \\
 		\draw[-] (-3,0) -- (3,0);
 		\draw[-] (0,-3) -- (0,3);
 		\draw (2,0) arc (0:360:2);
-		\draw[-,very thick] (0, 0) -- (1.3, 1.5);
-		\draw[-,very thick] (0, 0) -- (-0.6, 1.9);
-		\draw[-,very thick] (0, 0) -- (-1.9, 0.6) node[left] {$ \approx $ 0.1415 radian};
+		\draw[very thick] (0, 0) -- (1.3, 1.5);
+		\draw[very thick] (0, 0) -- (-0.6, 1.9);
+		\draw[very thick] (0, 0) -- (-1.9, 0.6) node[left] {$ \approx $ 0.1415 radian};
 	\end{tikzpicture}
 	\caption{radian}
 \end{figure}
@@ -227,7 +227,7 @@ Here are the three most common trigonometric functions and their reciprocals. \\
 	\centering
 	\begin{tabular}{|c|c|}
 		\hline
-		range                    & $ -1 \le sin(\theta) \ge 1 $        \\
+		range                    & $ -1 \le sin(\theta) \le 1 $        \\
 		\hline
 		doamin                   & $ \theta \in \mathbb R $            \\
 		\hline
@@ -610,7 +610,7 @@ We can switch between any two bases easily by using the formula: \\
 
 \begin{exercise}\nonumber
 	Proof
-	
+
 	\begin{gather*}
 		\because y = log_a(x) \leftrightarrow a^y = x \\
 		\begin{align}
