--- a/Calculus/parts/part4.tex
+++ b/Calculus/parts/part4.tex
@@ -430,12 +430,12 @@ Higher order derivative notations:
         $ x^3 + xy + y^2 = 1 $ & $ sin(xy) + ln(x + y) = 0 $ \\ \hline
         \begin{minipage}[b]{0.5\columnwidth}
             \centering
-            \raisebox{-1\height}{\includegraphics[width=1\linewidth]{img/part4/chapter19/1.png}}
+            \raisebox{-1\height}{\includegraphics[width=1\linewidth]{img/Part4/Chapter19/1.png}}
         \end{minipage}
                                &
         \begin{minipage}[b]{0.5\columnwidth}
             \centering
-            \raisebox{-1\height}{\includegraphics[width=1\linewidth]{img/part4/chapter19/2.png}}
+            \raisebox{-1\height}{\includegraphics[width=1\linewidth]{img/Part4/Chapter19/2.png}}
         \end{minipage}
         \\ \hline
     \end{tabular}
@@ -628,7 +628,7 @@ So, how do we determine the derivative of this function? With logarithmic differ
     \end{align}
 \end{exercise}
 
-It would be tedious to differentiate expression like $ y = {(x-2)^2(3x+1)^3\sqrt{x^2+2} \over (x-1)(x+10)^{10}} $ using product and quotient rules, and put pus at a high risk for making mistakes. We can use logarithms to simplify problems. It is technically an important step that we take the absolute value of both sides first that we aren¡¯t considering the $ ln() $ of a negative number. \\
+It would be tedious to differentiate expression like $ y = {(x-2)^2(3x+1)^3\sqrt{x^2+2} \over (x-1)(x+10)^{10}} $ using product and quotient rules, and put pus at a high risk for making mistakes. We can use logarithms to simplify problems. It is technically an important step that we take the absolute value of both sides first that we arenï¿½ï¿½t considering the $ ln() $ of a negative number. \\
 
 \begin{exercise}\nonumber
     If $ y = {(x-2)^2(3x+1)^3\sqrt{x^2+2} \over (x-1)(x+10)^{10}} $, find $ dy \over dx $. \\
